# databricks_mcp_server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
databricks_mcp_server/: __init__.py  __main__.py  server.py
databricks_mcp_server/common/: auth.py  config.py
databricks_mcp_server/services/: jobs_service.py  sql_service.py  uc_service.py  ws_service.py
